# confi

./: Cargo.toml  README.md  deny.toml  flake.nix  justfile
.github/workflows/: ci.yml
src/: confidence_interval.rs  confidence_level.rs  error.rs  lib.rs  significance.rs
src/confidence/: interval.rs  mod.rs
src/tests/: bartlett.rs  mod.rs
