[package]
name = "confidence"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
description = "confidence intervals and significance levels for statistical computation"
repository = "https://github.com/cgubbin/confidence"

[dependencies]
ndarray = "0.16.1"
num-traits = "0.2.19"
statrs = "0.17.1"
thiserror = "2.0.0"
