[package]
name = "confi"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
description = "confidence intervals and significance levels for statistical computation"
repository = "https://github.com/cgubbin/confi"

[dependencies]
ndarray = "0.16.1"
num-traits = "0.2.19"
statrs = "0.18.0"
thiserror = "2.0.0"
