[package]
name = "confi"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
description = "confidence intervals and significance levels for statistical computation"
repository = "https://github.com/cgubbin/confi"

[dependencies]
num-traits = "0.2.19"
thiserror = "2.0.0"

[dev-dependencies]
approx = "0.5.1"

[workspace.metadata.release]
tag = true
push = true
publish = true
sign-commit = false
